--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,18 @@
-body {
+/*****Fonts ****************************************************************/
+@font-face {
+  font-family: Ubuntu-Regular;
+  src: url("./fonts/ubuntu/Ubuntu-Regular.ttf");
+}
+
+@font-face {
+  font-family: Ubuntu-Bold;
+  src: url("./fonts/ubuntu/Ubuntu-Bold.ttf");
+}
+/***************************************************************************/
+
+
+
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +24,182 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+/***************************************************************************/
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body{
+  font-family: Ubuntu-Regular, sans-serif;
+  background: linear-gradient(
+      to bottom,
+      rgba(95, 73, 56, 0.6) 0,
+      rgba(92, 77, 66, 0.6) 100%
+    ),
+    url(./fruits-img.jpg);
+  background-position: center;
+  background-repeat: repeat;
+  background-attachment: scroll;
+  background-size: cover;
+ height: 100vh;
+}
+
+
+/**************************************************/
+
+a {
+  font-size: 14px;
+  line-height: 1.2;
+  color: #666666;
+  margin: 0px;
+  transition: all 0.4s;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+}
+
+a:focus {
+  outline: none !important;
+}
+
+a:hover {
+  text-decoration: none;
+  color: #fff;
+}
+
+/****************************************************/
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0px;
+}
+
+p {
+  font-size: 14px;
+  line-height: 1.2;
+  color: #666666;
+  margin: 0px;
+}
+
+ul,
+li {
+  margin: 0px;
+  list-style-type: none;
+}
+
+input {
+  outline: none;
+  border: none;
+}
+
+
+input::-webkit-input-placeholder {
+  color: #555555;
+}
+input:-moz-placeholder {
+  color: #555555;
+}
+input::-moz-placeholder {
+  color: #555555;
+}
+input:-ms-input-placeholder {
+  color: #555555;
+}
+
+button {
+  outline: none !important;
+  border: none;
+  background: transparent;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+
+/***************************************************************************/
+
+.container {
+  margin: 5px 15px;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  width: 90%;
+}
+
+#oldContainer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 0.25rem;
+}
+
+.inputDiv{
+  display: flex;
+ align-items: center;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 0.5rem;
+  margin: 0.25rem 0;
+  width: 100%;
+  min-height: 55px;
+}
+
+.title {
+  font-size: 25px;
+  color: #fff;
+  text-align: center;
+  padding: 10px 30px;
+}
+/*****************************************************************************/
+
+.item {
+  display: flex;
+  align-items: center;
+  justify-self: start;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 0.5rem;
+  margin: 0.25rem 0;
+  width: 100%;
+  height: auto !important;
+}
+
+
+.genBtnStyle {
+  cursor: pointer;
+  font-size: 12px;
+  color: #742854;
+  text-transform: uppercase;
+
+  margin: 0 5px 0 10px;
+  padding: 0 5px;
+  min-width: 70px;
+  height: 30px;
+  border-radius: 21px;
+  background: -webkit-linear-gradient(to left, #f1cb2d, #e5b042, #ffac00);
+  background: -o-linear-gradient(to left, #f1cb2d, #e5b042, #ffac00);
+  background: -moz-linear-gradient(to left, #f1cb2d, #e5b042, #ffac00);
+  background: linear-gradient(to left, #f1cb2d, #e5b042, #ffac00);
+}
+
+.genBtnStyle:hover {
+  background: #ec6e2b;
+}
+
+.fruitList{
+  min-height: 200px;
+  height: auto !important;
+  flex-direction: column;
+  position: relative;
 }
